# routes/index.js
@@ -4,18 +4,21 @@ const router = express.Router();
 //TODO: Uncomment Route as you finish the Controller for your Controller
 
 //Routes for recipes
-//router.use('/recipes', require('./recipeRoutes'));
+router.use('/recipes', require('./recipeRoutes'));
 //
 ////routes for users
-//router.use('/users', require('./userRoutes'));
+router.use('/users', require('./userRoutes'));
 //
 ////routes for ingredients
 router.use('/ingredients', require('./ingredientRoute'));
 //
-////Routes for posts
-//router.use('/posts', require('./postsRoutes'));
+////routes for comments
+router.use('/comments', require('./commentRoute'));
 //
-////swagger
+//Routes for posts
+router.use('/posts', require('./postsRoutes'));
+//
+//swagger
 router.use('/', require('./swagger'));
 
 module.exports = router;
